e2 bison语法分析/y.output
Terminals which are not used

   T_Lineend
   T_OR
   T_AND
   '.'
   T_ELSE


State 0 conflicts: 1 shift/reduce
State 1 conflicts: 1 reduce/reduce
State 11 conflicts: 1 reduce/reduce
State 33 conflicts: 30 reduce/reduce
State 60 conflicts: 2 shift/reduce
State 73 conflicts: 2 shift/reduce
State 74 conflicts: 2 shift/reduce
State 83 conflicts: 2 shift/reduce
State 84 conflicts: 2 shift/reduce
State 122 conflicts: 2 shift/reduce
State 123 conflicts: 2 shift/reduce
State 124 conflicts: 2 shift/reduce
State 125 conflicts: 2 shift/reduce
State 126 conflicts: 16 shift/reduce
State 127 conflicts: 16 shift/reduce
State 128 conflicts: 2 shift/reduce
State 129 conflicts: 2 shift/reduce
State 130 conflicts: 2 shift/reduce
State 131 conflicts: 2 shift/reduce
State 132 conflicts: 2 shift/reduce
State 133 conflicts: 2 shift/reduce
State 134 conflicts: 2 shift/reduce
State 145 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Fieldlist
    2        | Fieldlist Function
    3        | error

    4 Function: Type T_Identifier '(' FormalParams ')' StmtBlock

    5 Fieldlist: Fieldlist Field
    6          | /* empty */
    7          | error

    8 Field: Variable
    9      | Function

   10 VariableDecl: Type T_Identifier
   11             | error

   12 Variable: VariableDecl ';'
   13         | error

   14 Type: T_Int
   15     | T_Double
   16     | T_Boolean
   17     | T_String
   18     | T_Void
   19     | Type '[' ']'
   20     | error

   21 FormalParams: VariableDecl
   22             | FormalParams ',' VariableDecl
   23             | /* empty */

   24 StmtBlock: '{' Stmtlist '}'
   25          | error

   26 Stmtlist: Stmtlist Stmt
   27         | /* empty */

   28 Stmt: Variable
   29     | SimpleStmt ';'
   30     | IfStmt
   31     | WhileStmt
   32     | ForStmt
   33     | BreakStmt ';'
   34     | ReturnStmt ';'
   35     | PrintStmt ';'
   36     | StmtBlock

   37 SimpleStmt: LValue '=' Expr
   38           | IncrementStmt
   39           | DecrementStmt
   40           | Call
   41           | /* empty */
   42           | error

   43 IncrementStmt: LValue T_Ic

   44 DecrementStmt: LValue T_Dc

   45 LValue: T_Identifier
   46       | Expr '[' Expr ']'
   47       | error

   48 Call: T_Identifier '(' ActualParams ')'

   49 ActualParams: ExprMore
   50             | /* empty */

   51 ExprMore: Expr
   52         | ExprMore ',' Expr

   53 ForStmt: T_For '(' SimpleStmt ';' BoolExpr ';' SimpleStmt ')' Stmt

   54 WhileStmt: T_While '(' BoolExpr ')' Stmt

   55 IfStmt: T_If '(' BoolExpr ')' Stmt
   56       | T_If '(' BoolExpr ')' Stmt T_Else Stmt

   57 ReturnStmt: T_Return
   58           | T_Return Expr

   59 BreakStmt: T_Break

   60 PrintStmt: T_Print '(' ExprMore ')'

   61 BoolExpr: Expr

   62 Expr: Constant
   63     | LValue
   64     | Call
   65     | '(' Expr ')'
   66     | Expr '+' Expr
   67     | Expr '-' Expr
   68     | Expr '*' Expr
   69     | Expr '/' Expr
   70     | Expr '%' Expr
   71     | '-' Expr
   72     | Expr T_Dc
   73     | T_Dc Expr
   74     | Expr T_Ic
   75     | T_Ic Expr
   76     | Expr '<' Expr
   77     | Expr T_Le Expr
   78     | Expr '>' Expr
   79     | Expr T_Ge Expr
   80     | Expr T_Eq Expr
   81     | Expr T_Ne Expr
   82     | Expr T_And Expr
   83     | Expr T_Or Expr
   84     | '!' Expr
   85     | T_ReadInteger '(' ')'
   86     | T_ReadLine '(' ')'

   87 Constant: T_IntConstant
   88         | T_DoubleConstant
   89         | T_BooleanConstant
   90         | T_StringConstant
   91         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 84
'%' (37) 70
'(' (40) 4 48 53 54 55 56 60 65 85 86
')' (41) 4 48 53 54 55 56 60 65 85 86
'*' (42) 68
'+' (43) 66
',' (44) 22 52
'-' (45) 67 71
'.' (46)
'/' (47) 69
';' (59) 12 29 33 34 35 53
'<' (60) 76
'=' (61) 37
'>' (62) 78
'[' (91) 19 46
']' (93) 19 46
'{' (123) 24
'}' (125) 24
error (256) 3 7 11 13 20 25 42 47
T_Le (258) 77
T_Ge (259) 79
T_Eq (260) 80
T_Ne (261) 81
T_Ic (262) 43 74 75
T_Dc (263) 44 72 73
T_And (264) 82
T_Or (265) 83
T_Void (266) 18
T_Int (267) 14
T_Double (268) 15
T_Boolean (269) 16
T_String (270) 17
T_Null (271) 91
T_For (272) 53
T_While (273) 54
T_If (274) 55 56
T_Else (275) 56
T_Return (276) 57 58
T_Break (277) 59
T_Print (278) 60
T_ReadInteger (279) 85
T_ReadLine (280) 86
T_IntConstant (281) 87
T_DoubleConstant (282) 88
T_StringConstant (283) 90
T_Identifier (284) 4 10 45 48
T_BooleanConstant (285) 89
T_Lineend (286)
T_OR (287)
T_AND (288)
T_ELSE (289)
T_IFX (290)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Program (55)
    on left: 1 2 3, on right: 0
Function (56)
    on left: 4, on right: 2 9
Fieldlist (57)
    on left: 5 6 7, on right: 1 2 5
Field (58)
    on left: 8 9, on right: 5
VariableDecl (59)
    on left: 10 11, on right: 12 21 22
Variable (60)
    on left: 12 13, on right: 8 28
Type (61)
    on left: 14 15 16 17 18 19 20, on right: 4 10 19
FormalParams (62)
    on left: 21 22 23, on right: 4 22
StmtBlock (63)
    on left: 24 25, on right: 4 36
Stmtlist (64)
    on left: 26 27, on right: 24 26
Stmt (65)
    on left: 28 29 30 31 32 33 34 35 36, on right: 26 53 54 55 56
SimpleStmt (66)
    on left: 37 38 39 40 41 42, on right: 29 53
IncrementStmt (67)
    on left: 43, on right: 38
DecrementStmt (68)
    on left: 44, on right: 39
LValue (69)
    on left: 45 46 47, on right: 37 43 44 63
Call (70)
    on left: 48, on right: 40 64
ActualParams (71)
    on left: 49 50, on right: 48
ExprMore (72)
    on left: 51 52, on right: 49 52 60
ForStmt (73)
    on left: 53, on right: 32
WhileStmt (74)
    on left: 54, on right: 31
IfStmt (75)
    on left: 55 56, on right: 30
ReturnStmt (76)
    on left: 57 58, on right: 34
BreakStmt (77)
    on left: 59, on right: 33
PrintStmt (78)
    on left: 60, on right: 35
BoolExpr (79)
    on left: 61, on right: 53 54 55 56
Expr (80)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81 82 83 84 85 86, on right: 37 46 51 52 58 61 65 66 67 68 69
    70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
Constant (81)
    on left: 87 88 89 90 91, on right: 62


state 0

    0 $accept: . Program $end

    error  shift, and go to state 1

    $end       reduce using rule 6 (Fieldlist)
    error      [reduce using rule 6 (Fieldlist)]
    T_Void     reduce using rule 6 (Fieldlist)
    T_Int      reduce using rule 6 (Fieldlist)
    T_Double   reduce using rule 6 (Fieldlist)
    T_Boolean  reduce using rule 6 (Fieldlist)
    T_String   reduce using rule 6 (Fieldlist)

    Program    go to state 2
    Fieldlist  go to state 3


state 1

    3 Program: error .
    7 Fieldlist: error .

    $end      reduce using rule 3 (Program)
    $end      [reduce using rule 7 (Fieldlist)]
    $default  reduce using rule 7 (Fieldlist)


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


state 3

    1 Program: Fieldlist .
    2        | Fieldlist . Function
    5 Fieldlist: Fieldlist . Field

    error      shift, and go to state 5
    T_Void     shift, and go to state 6
    T_Int      shift, and go to state 7
    T_Double   shift, and go to state 8
    T_Boolean  shift, and go to state 9
    T_String   shift, and go to state 10

    $end  reduce using rule 1 (Program)

    Function      go to state 11
    Field         go to state 12
    VariableDecl  go to state 13
    Variable      go to state 14
    Type          go to state 15


state 4

    0 $accept: Program $end .

    $default  accept


state 5

   11 VariableDecl: error .
   13 Variable: error .
   20 Type: error .

    T_Identifier  reduce using rule 20 (Type)
    '['           reduce using rule 20 (Type)
    ';'           reduce using rule 11 (VariableDecl)
    $default      reduce using rule 13 (Variable)


state 6

   18 Type: T_Void .

    $default  reduce using rule 18 (Type)


state 7

   14 Type: T_Int .

    $default  reduce using rule 14 (Type)


state 8

   15 Type: T_Double .

    $default  reduce using rule 15 (Type)


state 9

   16 Type: T_Boolean .

    $default  reduce using rule 16 (Type)


state 10

   17 Type: T_String .

    $default  reduce using rule 17 (Type)


state 11

    2 Program: Fieldlist Function .
    9 Field: Function .

    $end      reduce using rule 2 (Program)
    $end      [reduce using rule 9 (Field)]
    $default  reduce using rule 9 (Field)


state 12

    5 Fieldlist: Fieldlist Field .

    $default  reduce using rule 5 (Fieldlist)


state 13

   12 Variable: VariableDecl . ';'

    ';'  shift, and go to state 16


state 14

    8 Field: Variable .

    $default  reduce using rule 8 (Field)


state 15

    4 Function: Type . T_Identifier '(' FormalParams ')' StmtBlock
   10 VariableDecl: Type . T_Identifier
   19 Type: Type . '[' ']'

    T_Identifier  shift, and go to state 17
    '['           shift, and go to state 18


state 16

   12 Variable: VariableDecl ';' .

    $default  reduce using rule 12 (Variable)


state 17

    4 Function: Type T_Identifier . '(' FormalParams ')' StmtBlock
   10 VariableDecl: Type T_Identifier .

    '('  shift, and go to state 19

    $default  reduce using rule 10 (VariableDecl)


state 18

   19 Type: Type '[' . ']'

    ']'  shift, and go to state 20


state 19

    4 Function: Type T_Identifier '(' . FormalParams ')' StmtBlock

    error      shift, and go to state 21
    T_Void     shift, and go to state 6
    T_Int      shift, and go to state 7
    T_Double   shift, and go to state 8
    T_Boolean  shift, and go to state 9
    T_String   shift, and go to state 10

    ')'  reduce using rule 23 (FormalParams)
    ','  reduce using rule 23 (FormalParams)

    VariableDecl  go to state 22
    Type          go to state 23
    FormalParams  go to state 24


state 20

   19 Type: Type '[' ']' .

    $default  reduce using rule 19 (Type)


state 21

   11 VariableDecl: error .
   20 Type: error .

    T_Identifier  reduce using rule 20 (Type)
    '['           reduce using rule 20 (Type)
    $default      reduce using rule 11 (VariableDecl)


state 22

   21 FormalParams: VariableDecl .

    $default  reduce using rule 21 (FormalParams)


state 23

   10 VariableDecl: Type . T_Identifier
   19 Type: Type . '[' ']'

    T_Identifier  shift, and go to state 25
    '['           shift, and go to state 18


state 24

    4 Function: Type T_Identifier '(' FormalParams . ')' StmtBlock
   22 FormalParams: FormalParams . ',' VariableDecl

    ')'  shift, and go to state 26
    ','  shift, and go to state 27


state 25

   10 VariableDecl: Type T_Identifier .

    $default  reduce using rule 10 (VariableDecl)


state 26

    4 Function: Type T_Identifier '(' FormalParams ')' . StmtBlock

    error  shift, and go to state 28
    '{'    shift, and go to state 29

    StmtBlock  go to state 30


state 27

   22 FormalParams: FormalParams ',' . VariableDecl

    error      shift, and go to state 21
    T_Void     shift, and go to state 6
    T_Int      shift, and go to state 7
    T_Double   shift, and go to state 8
    T_Boolean  shift, and go to state 9
    T_String   shift, and go to state 10

    VariableDecl  go to state 31
    Type          go to state 23


state 28

   25 StmtBlock: error .

    $default  reduce using rule 25 (StmtBlock)


state 29

   24 StmtBlock: '{' . Stmtlist '}'

    $default  reduce using rule 27 (Stmtlist)

    Stmtlist  go to state 32


state 30

    4 Function: Type T_Identifier '(' FormalParams ')' StmtBlock .

    $default  reduce using rule 4 (Function)


state 31

   22 FormalParams: FormalParams ',' VariableDecl .

    $default  reduce using rule 22 (FormalParams)


state 32

   24 StmtBlock: '{' Stmtlist . '}'
   26 Stmtlist: Stmtlist . Stmt

    error              shift, and go to state 33
    T_Ic               shift, and go to state 34
    T_Dc               shift, and go to state 35
    T_Void             shift, and go to state 6
    T_Int              shift, and go to state 7
    T_Double           shift, and go to state 8
    T_Boolean          shift, and go to state 9
    T_String           shift, and go to state 10
    T_Null             shift, and go to state 36
    T_For              shift, and go to state 37
    T_While            shift, and go to state 38
    T_If               shift, and go to state 39
    T_Return           shift, and go to state 40
    T_Break            shift, and go to state 41
    T_Print            shift, and go to state 42
    T_ReadInteger      shift, and go to state 43
    T_ReadLine         shift, and go to state 44
    T_IntConstant      shift, and go to state 45
    T_DoubleConstant   shift, and go to state 46
    T_StringConstant   shift, and go to state 47
    T_Identifier       shift, and go to state 48
    T_BooleanConstant  shift, and go to state 49
    '-'                shift, and go to state 50
    '!'                shift, and go to state 51
    '('                shift, and go to state 52
    '{'                shift, and go to state 29
    '}'                shift, and go to state 53

    ';'  reduce using rule 41 (SimpleStmt)

    VariableDecl   go to state 13
    Variable       go to state 54
    Type           go to state 23
    StmtBlock      go to state 55
    Stmt           go to state 56
    SimpleStmt     go to state 57
    IncrementStmt  go to state 58
    DecrementStmt  go to state 59
    LValue         go to state 60
    Call           go to state 61
    ForStmt        go to state 62
    WhileStmt      go to state 63
    IfStmt         go to state 64
    ReturnStmt     go to state 65
    BreakStmt      go to state 66
    PrintStmt      go to state 67
    Expr           go to state 68
    Constant       go to state 69


state 33

   11 VariableDecl: error .
   13 Variable: error .
   20 Type: error .
   25 StmtBlock: error .
   42 SimpleStmt: error .
   47 LValue: error .

    error              reduce using rule 13 (Variable)
    error              [reduce using rule 25 (StmtBlock)]
    T_Le               reduce using rule 47 (LValue)
    T_Ge               reduce using rule 47 (LValue)
    T_Eq               reduce using rule 47 (LValue)
    T_Ne               reduce using rule 47 (LValue)
    T_Ic               reduce using rule 13 (Variable)
    T_Ic               [reduce using rule 25 (StmtBlock)]
    T_Ic               [reduce using rule 47 (LValue)]
    T_Dc               reduce using rule 13 (Variable)
    T_Dc               [reduce using rule 25 (StmtBlock)]
    T_Dc               [reduce using rule 47 (LValue)]
    T_And              reduce using rule 47 (LValue)
    T_Or               reduce using rule 47 (LValue)
    T_Void             reduce using rule 13 (Variable)
    T_Void             [reduce using rule 25 (StmtBlock)]
    T_Int              reduce using rule 13 (Variable)
    T_Int              [reduce using rule 25 (StmtBlock)]
    T_Double           reduce using rule 13 (Variable)
    T_Double           [reduce using rule 25 (StmtBlock)]
    T_Boolean          reduce using rule 13 (Variable)
    T_Boolean          [reduce using rule 25 (StmtBlock)]
    T_String           reduce using rule 13 (Variable)
    T_String           [reduce using rule 25 (StmtBlock)]
    T_Null             reduce using rule 13 (Variable)
    T_Null             [reduce using rule 25 (StmtBlock)]
    T_For              reduce using rule 13 (Variable)
    T_For              [reduce using rule 25 (StmtBlock)]
    T_While            reduce using rule 13 (Variable)
    T_While            [reduce using rule 25 (StmtBlock)]
    T_If               reduce using rule 13 (Variable)
    T_If               [reduce using rule 25 (StmtBlock)]
    T_Else             reduce using rule 13 (Variable)
    T_Else             [reduce using rule 25 (StmtBlock)]
    T_Return           reduce using rule 13 (Variable)
    T_Return           [reduce using rule 25 (StmtBlock)]
    T_Break            reduce using rule 13 (Variable)
    T_Break            [reduce using rule 25 (StmtBlock)]
    T_Print            reduce using rule 13 (Variable)
    T_Print            [reduce using rule 25 (StmtBlock)]
    T_ReadInteger      reduce using rule 13 (Variable)
    T_ReadInteger      [reduce using rule 25 (StmtBlock)]
    T_ReadLine         reduce using rule 13 (Variable)
    T_ReadLine         [reduce using rule 25 (StmtBlock)]
    T_IntConstant      reduce using rule 13 (Variable)
    T_IntConstant      [reduce using rule 25 (StmtBlock)]
    T_DoubleConstant   reduce using rule 13 (Variable)
    T_DoubleConstant   [reduce using rule 25 (StmtBlock)]
    T_StringConstant   reduce using rule 13 (Variable)
    T_StringConstant   [reduce using rule 25 (StmtBlock)]
    T_Identifier       reduce using rule 13 (Variable)
    T_Identifier       [reduce using rule 20 (Type)]
    T_Identifier       [reduce using rule 25 (StmtBlock)]
    T_BooleanConstant  reduce using rule 13 (Variable)
    T_BooleanConstant  [reduce using rule 25 (StmtBlock)]
    '='                reduce using rule 47 (LValue)
    '<'                reduce using rule 47 (LValue)
    '>'                reduce using rule 47 (LValue)
    '+'                reduce using rule 47 (LValue)
    '-'                reduce using rule 13 (Variable)
    '-'                [reduce using rule 25 (StmtBlock)]
    '-'                [reduce using rule 47 (LValue)]
    '*'                reduce using rule 47 (LValue)
    '/'                reduce using rule 47 (LValue)
    '%'                reduce using rule 47 (LValue)
    '!'                reduce using rule 13 (Variable)
    '!'                [reduce using rule 25 (StmtBlock)]
    '('                reduce using rule 13 (Variable)
    '('                [reduce using rule 25 (StmtBlock)]
    '['                reduce using rule 20 (Type)
    '['                [reduce using rule 47 (LValue)]
    ';'                reduce using rule 11 (VariableDecl)
    ';'                [reduce using rule 13 (Variable)]
    ';'                [reduce using rule 25 (StmtBlock)]
    ';'                [reduce using rule 42 (SimpleStmt)]
    '{'                reduce using rule 13 (Variable)
    '{'                [reduce using rule 25 (StmtBlock)]
    '}'                reduce using rule 13 (Variable)
    '}'                [reduce using rule 25 (StmtBlock)]
    $default           reduce using rule 13 (Variable)


state 34

   75 Expr: T_Ic . Expr

    error              shift, and go to state 70
    T_Ic               shift, and go to state 34
    T_Dc               shift, and go to state 35
    T_Null             shift, and go to state 36
    T_ReadInteger      shift, and go to state 43
    T_ReadLine         shift, and go to state 44
    T_IntConstant      shift, and go to state 45
    T_DoubleConstant   shift, and go to state 46
    T_StringConstant   shift, and go to state 47
    T_Identifier       shift, and go to state 48
    T_BooleanConstant  shift, and go to state 49
    '-'                shift, and go to state 50
    '!'                shift, and go to state 51
    '('                shift, and go to state 52

    LValue    go to state 71
    Call      go to state 72
    Expr      go to state 73
    Constant  go to state 69


state 35

   73 Expr: T_Dc . Expr

    error              shift, and go to state 70
    T_Ic               shift, and go to state 34
    T_Dc               shift, and go to state 35
    T_Null             shift, and go to state 36
    T_ReadInteger      shift, and go to state 43
    T_ReadLine         shift, and go to state 44
    T_IntConstant      shift, and go to state 45
    T_DoubleConstant   shift, and go to state 46
    T_StringConstant   shift, and go to state 47
    T_Identifier       shift, and go to state 48
    T_BooleanConstant  shift, and go to state 49
    '-'                shift, and go to state 50
    '!'                shift, and go to state 51
    '('                shift, and go to state 52

    LValue    go to state 71
    Call      go to state 72
    Expr      go to state 74
    Constant  go to state 69


state 36

   91 Constant: T_Null .

    $default  reduce using rule 91 (Constant)


state 37

   53 ForStmt: T_For . '(' SimpleStmt ';' BoolExpr ';' SimpleStmt ')' Stmt

    '('  shift, and go to state 75


state 38

   54 WhileStmt: T_While . '(' BoolExpr ')' Stmt

    '('  shift, and go to state 76


state 39

   55 IfStmt: T_If . '(' BoolExpr ')' Stmt
   56       | T_If . '(' BoolExpr ')' Stmt T_Else Stmt

    '('  shift, and go to state 77


state 40

   57 ReturnStmt: T_Return .
   58           | T_Return . Expr

    error              shift, and go to state 70
    T_Ic               shift, and go to state 34
    T_Dc               shift, and go to state 35
    T_Null             shift, and go to state 36
    T_ReadInteger      shift, and go to state 43
    T_ReadLine         shift, and go to state 44
    T_IntConstant      shift, and go to state 45
    T_DoubleConstant   shift, and go to state 46
    T_StringConstant   shift, and go to state 47
    T_Identifier       shift, and go to state 48
    T_BooleanConstant  shift, and go to state 49
    '-'                shift, and go to state 50
    '!'                shift, and go to state 51
    '('                shift, and go to state 52

    ';'  reduce using rule 57 (ReturnStmt)

    LValue    go to state 71
    Call      go to state 72
    Expr      go to state 78
    Constant  go to state 69


state 41

   59 BreakStmt: T_Break .

    $default  reduce using rule 59 (BreakStmt)


state 42

   60 PrintStmt: T_Print . '(' ExprMore ')'

    '('  shift, and go to state 79


state 43

   85 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 80


state 44

   86 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 81


state 45

   87 Constant: T_IntConstant .

    $default  reduce using rule 87 (Constant)


state 46

   88 Constant: T_DoubleConstant .

    $default  reduce using rule 88 (Constant)


state 47

   90 Constant: T_StringConstant .

    $default  reduce using rule 90 (Constant)


state 48

   45 LValue: T_Identifier .
   48 Call: T_Identifier . '(' ActualParams ')'

    '('  shift, and go to state 82

    $default  reduce using rule 45 (LValue)


state 49

   89 Constant: T_BooleanConstant .

    $default  reduce using rule 89 (Constant)


state 50

   71 Expr: '-' . Expr

    error              shift, and go to state 70
    T_Ic               shift, and go to state 34
    T_Dc               shift, and go to state 35
    T_Null             shift, and go to state 36
    T_ReadInteger      shift, and go to state 43
    T_ReadLine         shift, and go to state 44
    T_IntConstant      shift, and go to state 45
    T_DoubleConstant   shift, and go to state 46
    T_StringConstant   shift, and go to state 47
    T_Identifier       shift, and go to state 48
    T_BooleanConstant  shift, and go to state 49
    '-'                shift, and go to state 50
    '!'                shift, and go to state 51
    '('                shift, and go to state 52

    LValue    go to state 71
    Call      go to state 72
    Expr      go to state 83
    Constant  go to state 69


state 51

   84 Expr: '!' . Expr
